--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-         <nav>
+         <nav class="nav-title">
 
             <h3>G3 Architects</h3>
             <ul>
@@ -18,6 +18,17 @@
                 <li><a href="">Login</a></li>
             </ul>
          </nav>
+         <div class="banner">
+        <div class="banner-content">
+            <h1 class="banner-title">Brand New Group of Architects 
+            </h1>
+                 <p class="banner-descrition">
+                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+               </p>
+             <button class="btn-primary">Explore More</button>
+        </div>
+         <img src="banner.png" alt="">
+         </div>
     </header>
     <main>
 
