frature contaent added

--- a/index.html
+++ b/index.html
@@ -31,8 +31,25 @@
          </div>
     </header>
     <main>
+<!-- team  feature section start  -->
+<section class="teams-container">
+<div class="teams-img-container">
+<img src="team1.png" alt="">
+<img src="team2.png" alt="">
+<img src="team3.png" alt="">
+<img src="team4.png" alt="">
 
-    </main>
+</div>
+<div class="teams-content">
+    <h3 class="teams-title"><span class="quick-list">Quick List</span> <span class="oil">of Our</span> <span class="fem">Feature</span></h3>
+    <p class="teams-descrition">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+    <button class="btn-primary">Explore More</button>
+
+
+</div>
+</section>
+
+</main>
     <footer>
 
     </footer>
