--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="banner-content">
             <h1 class="banner-title">Brand New Group of Architects 
             </h1>
-                 <p class="banner-descrition">
+                 <p class="text-lightgray">
                   There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
                </p>
              <button class="btn-primary">Explore More</button>
@@ -42,7 +42,7 @@
 </div>
 <div class="teams-content">
     <h3 class="teams-title"><span class="quick-list">Quick List</span> <span class="oil">of Our</span> <span class="fem">Feature</span></h3>
-    <p class="teams-descrition">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
     <button class="btn-primary">Explore More</button>
 
 
