--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
 
 </div>
 </section>
+<!-- feature section -->
+<section class="features">
+
+
+
+</section>
+<!-- fact sectiom -->
+<section class="fact">
+    <h3 class="nav-title">Some Facts</h3>
+    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+
+</section>
 
 </main>
     <footer>
