--- a/index.html
+++ b/index.html
@@ -58,7 +58,29 @@
 <section class="fact">
     <h3 class="nav-title">Some Facts</h3>
     <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+<div class="facts-card-container">
+    <div class="card">
+        <img src="icons/ribon.png" alt="">
+        <h2 class="card-stats">54</h2>
+        <p class="card-title">Awards Winnings</p>
+    </div>
+    <div class="card">
+        <img src="icons/projects.png" alt="">
+        <h2 class="card-stats">1458</h2>
+        <p class="card-title">Project Finished</p>
+    </div>
+    <div class="card">
+        <img src="icons/customers.png" alt="">
+        <h2 class="card-stats">590</h2>
+        <p class="card-title">Clients Worked</p>
+    </div>
+    <div class="card">
+        <img src="icons/email.png" alt="">
+        <h2 class="card-stats">22578</h2>
+        <p class="card-title">Email Send</p>
+    </div>
 
+</div>
 
 </section>
 
