--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
 </div>
 
 </section>
+<!-- sponser section -->
+<section class="sponsors">
+  <h3 class="section-title">Our Sponsors</h3>  
+  <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+  <div class="sponsors-img-container">
+    <img src="sponsors/spotify.png" alt="">
+    <img src="sponsors/google.png" alt="">
+    <img src="sponsors/telerama.png" alt="">
+    <img src="sponsors/amazon.png" alt="">
+    <img src="sponsors/figma.png" alt="">
+
+
+  </div>
+</section>
 
 </main>
     <footer>
