--- a/index.html
+++ b/index.html
@@ -50,7 +50,42 @@
 </section>
 <!-- feature section -->
 <section class="features">
+<div class="feature-content">
+<h2 class="section-title">Features you will <br> love & enjoy</h2>
+<p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+<div class="card">
+    <h4>Dexktop & Mobile Version</h4>
+    <p class="text-lightgray">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised. 
+    </p>
+</div>
+<div class="card">
+    <h4>Dexktop & Mobile Version</h4>
+    <p class="text-lightgray">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised. 
+    </p>
+</div>
+<div class="card">
+    <h4>Dexktop & Mobile Version</h4>
+    <p class="text-lightgray">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised. 
+    </p>
+</div>
+<div class="card">
+    <h4>Dexktop & Mobile Version</h4>
+    <p class="text-lightgray">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised. 
+    </p>
+</div>
 
+</div>
+<div class="feature-img">
+    <img src="architect.png" alt="">
+    <div class="ten-year-badge">
+        <h2>10+ Years</h2>
+        <p>Experiance</p>
+    </div>
+</div>
 
 
 </section>
@@ -99,8 +134,8 @@
 </section>
 
 </main>
-    <footer>
-
+    <footer class="footers">
+<h4>All rights reserved copyright@2023 startup landing page design</h4>
     </footer>
 </body>
 </html>
