--- a/index.html
+++ b/index.html
@@ -134,8 +134,14 @@
 </section>
 
 </main>
-    <footer class="footers">
-<h4>All rights reserved copyright@2023 startup landing page design</h4>
+    <footer>
+        <div class="last-part">
+
+<h4 class="job">All rights reserved copyright@2023 startup landing page design</h4>
+
+
+        </div>
+
     </footer>
 </body>
 </html>
